--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-  "name": "gql-fragments-generator",
-  "version": "1.0.5",
-  "description": "create fragments from graphql schema",
-  "main": "index.js",
-  "directories": {
-    "example": "example",
-    "test": "test"
-  },
-  "dependencies": {
-    "commander": "^2.15.1",
-    "del": "^3.0.0",
-    "graphql": "^0.13.2"
-  },
-  "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.0.5",
-    "should": "^13.2.1"
-  },
-  "scripts": {
-    "lint": "eslint ./src",
-    "test": "mocha -u qunit"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hasan-git/gql-fragments-generator.git"
-  },
-  "keywords": [
-    "graphql",
-    "fragments",
-    "generate"
-  ],
-  "author": "Hasan",
-  "bin": {
-    "gqlgfrag": "index.js"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Hasan-git/gql-fragments-generator/issues"
-  },
-  "homepage": "https://github.com/Hasan-git/gql-fragments-generator#readme"
+	"name": "@barelyhuman/gqlfragments",
+	"version": "0.1.0",
+	"description": "create fragments from graphql schema",
+	"keywords": [
+		"graphql",
+		"fragments",
+		"generate"
+	],
+	"homepage": "https://github.com/barelyhuman/gql-fragments-generator#readme",
+	"bugs": {
+		"url": "https://github.com/barelyhuman/gql-fragments-generator/issues"
+	},
+	"repository": "git+https://github.com/barelyhuman/gql-fragments-generator.git",
+	"license": "ISC",
+	"author": "Reaper",
+	"main": "index.js",
+	"bin": {
+		"gqlfragments": "src/cli.js"
+	},
+	"directories": {
+		"example": "example",
+		"test": "test"
+	},
+	"scripts": {
+		"test": "mocha -u qunit",
+		"fix": "prettier --write"
+	},
+	"files": [
+		"src"
+	],
+	"prettier": "@barelyhuman/prettier-config",
+	"dependencies": {
+		"commander": "^9.2.0",
+		"del": "^6.1.0",
+		"graphql": "^16.5.0"
+	},
+	"devDependencies": {
+		"@barelyhuman/prettier-config": "^0.1.0",
+		"mocha": "^5.0.5",
+		"should": "^13.2.1"
+	},
+	"peerDependencies": {
+		"prettier": "^2.6.2"
+	}
 }
