--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@barelyhuman/gqlfragments",
-	"version": "0.1.0",
+	"version": "0.1.1-beta.1",
 	"description": "create fragments from graphql schema",
 	"keywords": [
 		"graphql",
@@ -17,6 +17,9 @@
 	"main": "index.js",
 	"bin": {
 		"gqlfragments": "src/cli.js"
+	},
+	"publishConfig": {
+		"access": "public"
 	},
 	"directories": {
 		"example": "example",
